--- a/socialApp/src/main/resources/application.properties
+++ b/socialApp/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.username = root
 spring.datasource.password = Mdmusa98019@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
+
+
+
+
+management.endpoints.web.exposure.include=*
